<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/lg"
    tools:context=".ThirdPage">


    <TextView
        android:id="@+id/wait3"
        android:layout_width="86dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:fontFamily="@font/reem_kufi"
        android:gravity="top"
        android:text="@string/wait"
        android:textAppearance="@style/wait"
        tools:ignore="ObsoleteLayoutParam,TextSizeCheck" />

    <TextView
        android:id="@+id/smart3"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="183dp"
        android:layout_marginTop="-720dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="660dp"
        android:fontFamily="@font/reem_kufi"
        android:gravity="top"
        android:text="@string/smart"
        android:textAppearance="@style/smart"
        tools:ignore="ObsoleteLayoutParam,TextSizeCheck,TextContrastCheck" />


    <ImageView
        android:id="@+id/time"
        android:layout_width="360dp"
        android:layout_height="344dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="-690dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="360dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/time"
        tools:ignore="ImageContrastCheck,ObsoleteLayoutParam" />

    <TextView
        android:id="@+id/receive_rea"
        android:layout_width="289dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="-380dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="340dp"
        android:fontFamily="@font/reem_kufi"
        android:gravity="top"
        android:text="@string/receive_rea"
        android:textAppearance="@style/receive_rea"
        tools:ignore="ObsoleteLayoutParam,TextSizeCheck" />

    <TextView
        android:id="@+id/stay_inform"
        android:layout_width="361dp"
        android:layout_height="96dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="-330dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="230dp"
        android:fontFamily="@font/reem_kufi"
        android:gravity="center_horizontal|top"
        android:text="@string/stay_inform"
        android:textAppearance="@style/stay_inform"

        tools:ignore="ObsoleteLayoutParam,TextContrastCheck,TextSizeCheck" />

    <ImageView
        android:id="@+id/group_3"
        android:layout_width="61dp"
        android:layout_height="16dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="175dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-220dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="184dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="201dp"
        android:src="@drawable/groupfive"
        tools:ignore="ContentDescription,ObsoleteLayoutParam" />

    <ImageButton
        android:id="@+id/backk"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="-170dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="105dp"
        android:backgroundTint="@color/lg"
        android:contentDescription="TODO"
        android:src="@drawable/back"
        tools:ignore="ContentDescription,DuplicateSpeakableTextCheck,HardcodedText,ObsoleteLayoutParam,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/getstarted"
        android:layout_width="140dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="251dp"
        android:layout_marginTop="-149dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="105dp"
        android:backgroundTint="@color/lg"
        android:src="@drawable/groupsix"
        tools:ignore="ContentDescription,ImageContrastCheck,ObsoleteLayoutParam,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

</LinearLayout>