<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context=".HomePage">


    <TextView
        android:id="@+id/hello"
        android:layout_width="60dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="149dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:fontFamily="@font/reem_kufi"
        android:gravity="top"
        android:text="@string/hello"
        android:textAppearance="@style/hello"
        tools:ignore="ObsoleteLayoutParam,TextSizeCheck" />

    <TextView
        android:id="@+id/there"
        android:layout_width="60dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="204dp"
        android:layout_marginTop="-698dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:fontFamily="@font/reem_kufi"
        android:gravity="top"
        android:text="@string/there"
        android:textAppearance="@style/there"
        tools:ignore="ObsoleteLayoutParam,TextSizeCheck" />

    <ImageView
        android:id="@+id/rectangle_ns"
        android:layout_width="371dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-600dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:background="@drawable/rectangle_ns"
        tools:ignore="ContentDescription,ObsoleteLayoutParam,ImageContrastCheck" />

    <TextView
        android:id="@+id/nowS"
        android:layout_width="100dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="-725dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:fontFamily="@font/poppins"
        android:gravity="top"
        android:text="@string/nowS"
        android:textAppearance="@style/nowS"
        tools:ignore="ObsoleteLayoutParam,TextSizeCheck" />


    <ImageView
        android:id="@+id/rectangle_pw"
        android:layout_width="164dp"
        android:layout_height="175dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-600dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:background="@drawable/rectangle_pw"
        tools:ignore="ContentDescription,ObsoleteLayoutParam,ImageContrastCheck" />

    <ImageView
        android:id="@+id/rectangle_pos"
        android:layout_width="164dp"
        android:layout_height="175dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="225dp"
        android:layout_marginTop="-835dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:background="@drawable/rectangle_pw"
        tools:ignore="ContentDescription,ObsoleteLayoutParam,ImageContrastCheck" />

    <TextView
        android:id="@+id/people_wait"
        android:layout_width="74dp"
        android:layout_height="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-685dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:gravity="top"
        android:text="@string/people_wait"
        android:textAppearance="@style/people_wait"
        tools:ignore="ObsoleteLayoutParam,TextSizeCheck" />

    <TextView
        android:id="@+id/position"
        android:layout_width="39dp"
        android:layout_height="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="240dp"
        android:layout_marginTop="-675dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:gravity="top"
        android:text="@string/position"
        android:textAppearance="@style/position"
        tools:ignore="ObsoleteLayoutParam,TextSizeCheck" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="13dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="197dp"
        android:layout_marginTop="-780dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id"
        tools:ignore="ObsoleteLayoutParam,TextSizeCheck" />

    <ImageButton
        android:id="@+id/question"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="360dp"
        android:layout_marginTop="-765dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:background="@drawable/question"
        tools:ignore="ContentDescription,ObsoleteLayoutParam,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/to_get_a_nu"
        android:layout_width="246dp"
        android:layout_height="27dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-465dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:gravity="top"
        android:text="@string/to_get_a_nu"
        android:textAppearance="@style/to_get_a_nu"
        tools:ignore="ObsoleteLayoutParam,TextSizeCheck" />

    <TextView
        android:id="@+id/enter_the_s"
        android:layout_width="199dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-645dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:gravity="top"
        android:text="@string/enter_the_s"
        android:textAppearance="@style/enter_the_s"
        tools:ignore="ObsoleteLayoutParam,TextSizeCheck" />

    <ImageView
        android:id="@+id/rectangle_snum"
        android:layout_width="199dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle_snum"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-655dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        tools:ignore="ContentDescription,ObsoleteLayoutParam" />

    <EditText
        android:id="@+id/wtsmrt12345"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="-694dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:gravity="top"
        android:text="@string/wtsmrt12345"
        android:textAppearance="@style/wtsmrt12345"
        tools:ignore="Autofill,LabelFor,ObsoleteLayoutParam,TextFields,TextSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/or"
        android:layout_width="19dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="258dp"
        android:layout_marginTop="-694dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:gravity="top"
        android:text="@string/or"
        android:textAppearance="@style/or"
        tools:ignore="ObsoleteLayoutParam,TextSizeCheck" />

    <ImageButton
        android:id="@+id/qrcode"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="325dp"
        android:layout_marginTop="-705dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:background="@drawable/qrcode"
        tools:ignore="ContentDescription,ObsoleteLayoutParam,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btn_qstart"
        android:layout_width="140dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="-600dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="105dp"
        android:backgroundTint="@color/lg"
        android:src="@drawable/group_seven"
        tools:ignore="ContentDescription,ObsoleteLayoutParam,SpeakableTextPresentCheck,TouchTargetSizeCheck" />


    <FrameLayout
        android:id="@+id/frmlyt_btnhelp"
        android:layout_width="370dp"
        android:layout_height="473dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="-600dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:visibility="invisible"
        tools:ignore="ObsoleteLayoutParam">

        <ImageView
            android:id="@+id/rectangle_btnhelp"
            android:layout_width="367dp"
            android:layout_height="473dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/rectangle_qinstruc"
            tools:ignore="ContentDescription,ObsoleteLayoutParam" />

        <TextView
            android:id="@+id/queueing_in"
            android:layout_width="323dp"
            android:layout_height="426dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="top"
            android:text="@string/queueing_in"
            android:textAppearance="@style/queueing_in"
            tools:ignore="ObsoleteLayoutParam,TextSizeCheck" />

        <ImageButton
            android:id="@+id/exit_square"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="323dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="221dp"
            android:layout_marginBottom="660dp"
            android:background="@drawable/exit_square"
            tools:ignore="ContentDescription,ObsoleteLayoutParam,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </FrameLayout>
    
</LinearLayout>