<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/lg"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LLwaitsmart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center">

        <TextView
            android:id="@+id/wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/reem_kufi"
            android:text="@string/wait"
            android:textAppearance="@style/wait"
            tools:ignore="ObsoleteLayoutParam,TextSizeCheck" />

        <TextView
            android:id="@+id/smart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-8dp"
            android:fontFamily="@font/reem_kufi"
            android:text="@string/smart"
            android:textAppearance="@style/smart"
            tools:ignore="ObsoleteLayoutParam,TextContrastCheck,TextSizeCheck"
            android:layout_marginLeft="-8dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/what"
        android:layout_width="277dp"
        android:layout_height="277dp"
        android:layout_below="@+id/LLwaitsmart"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/what"
        tools:ignore="ImageContrastCheck,ObsoleteLayoutParam" />

    <TextView
        android:id="@+id/whatis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/what"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/reem_kufi"
        android:text="What is WaitSmart?"
        android:textAppearance="@style/receive_rea"
        tools:ignore="HardcodedText,ObsoleteLayoutParam,TextSizeCheck" />

    <TextView
        android:id="@+id/waitsmartis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whatis"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/reem_kufi"
        android:gravity="center"
        android:text="@string/waitsmartis"
        android:textAppearance="@style/stay_inform"
        tools:ignore="ObsoleteLayoutParam,TextContrastCheck,TextSizeCheck" />

    <ImageView
        android:id="@+id/group"
        android:layout_width="61dp"
        android:layout_height="16dp"
        android:layout_below="@id/waitsmartis"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/group"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText,ObsoleteLayoutParam" />

    <ImageButton
        android:id="@+id/skippp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/group"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:backgroundTint="@color/lg"
        android:contentDescription="TODO"
        android:src="@drawable/skip"
        tools:ignore="ContentDescription,HardcodedText,ObsoleteLayoutParam,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,ImageContrastCheck"
        android:layout_marginLeft="30dp" />

    <ImageButton
        android:id="@+id/nextbtn"
        android:layout_width="118dp"
        android:layout_height="117dp"
        android:layout_marginStart="50dp"
        android:layout_toEndOf="@+id/group"
        android:layout_below="@+id/group"
        android:backgroundTint="@color/lg"
        android:contentDescription="TODO"
        android:src="@drawable/arrow"
        android:onClick="fadeTransition"
        tools:ignore="ContentDescription,HardcodedText,ObsoleteLayoutParam,SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@+id/group" />

</RelativeLayout>
