<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context=".SecondPage">

    <TextView
        android:id="@+id/waitt"
        android:layout_width="86dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="660dp"
        android:fontFamily="@font/reem_kufi"
        android:gravity="top"
        android:text="@string/wait"
        android:textAppearance="@style/wait"
        tools:ignore="ObsoleteLayoutParam,TextSizeCheck" />

    <TextView
        android:id="@+id/smartt"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="183dp"
        android:layout_marginTop="-720dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="660dp"
        android:fontFamily="@font/reem_kufi"
        android:gravity="top"
        android:text="@string/smart"
        android:textAppearance="@style/smart"
        tools:ignore="ObsoleteLayoutParam,TextContrastCheck,TextSizeCheck" />

    <ImageView
        android:id="@+id/layerone"
        android:layout_width="277dp"
        android:layout_height="277dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="-650dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="350dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/layerone"
        tools:ignore="ImageContrastCheck,ObsoleteLayoutParam" />

    <TextView
        android:id="@+id/how_it"
        android:layout_width="143dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="-340dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="376dp"
        android:fontFamily="@font/reem_kufi"
        android:gravity="top"
        android:text="How it works?"
        android:textAppearance="@style/receive_rea"
        tools:ignore="HardcodedText,ObsoleteLayoutParam,TextSizeCheck" />

    <TextView
        android:id="@+id/simply_scan"
        android:layout_width="361dp"
        android:layout_height="96dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-370dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="230dp"
        android:fontFamily="@font/reem_kufi"
        android:gravity="center_horizontal|top"
        android:text="@string/simplyscan"
        android:textAppearance="@style/stay_inform"
        tools:ignore="ObsoleteLayoutParam,TextContrastCheck,TextSizeCheck" />

    <ImageView
        android:id="@+id/group2"
        android:layout_width="61dp"
        android:layout_height="16dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="175dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-220dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="184dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="201dp"
        android:src="@drawable/groupfor"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText,ObsoleteLayoutParam" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="-170dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="105dp"
        android:backgroundTint="@color/white"
        android:contentDescription="TODO"
        android:src="@drawable/back"
        tools:ignore="ContentDescription,HardcodedText,ObsoleteLayoutParam,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/nextbtn2"
        android:layout_width="118dp"
        android:layout_height="117dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="290dp"
        android:layout_marginTop="-190dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="105dp"
        android:backgroundTint="@color/white"
        android:contentDescription="TODO"
        android:src="@drawable/arrow"
        tools:ignore="ContentDescription,HardcodedText,ObsoleteLayoutParam,SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />

    </LinearLayout>
